@@ -6798,6 +6798,12 @@
 
 	* config/moxie/predicates.md (moxie_general_movsrc_operand):
 	Restrict move source register offsets to 16 bits.
+
+2014-11-22 Uros Bizjak <ubizjak@gmail.com>
+
+ * params.def (PARAM_MAX_COMPLETELY_PEELED_INSNS): Increase to 200.
+ * config/i386/i386.c (ix86_option_override_internal): Do not increase
+ PARAM_MAX_COMPLETELY_PEELED_INSNS.
 
 Copyright (C) 2015 Free Software Foundation, Inc.
 
